[gd_scene load_steps=25 format=3 uid="uid://bpvvyk6546855"]

[ext_resource type="PackedScene" uid="uid://bpl3kgkfi7gse" path="res://Assets/Models/Tractor/Tractor_Wheeless_gltf/Tractor_Wheeless.gltf" id="1_lulf2"]
[ext_resource type="Script" path="res://Tractor/Tractor.gd" id="1_p1t78"]
[ext_resource type="PackedScene" uid="uid://caffw3mhybpw4" path="res://Tractor/FrontWheel_Left.tscn" id="2_6cc24"]
[ext_resource type="PackedScene" uid="uid://b4d3eeuxnarcq" path="res://Tractor/FrontWheel_Right.tscn" id="3_2bmak"]
[ext_resource type="PackedScene" uid="uid://c135krm31oi4a" path="res://Tractor/RearWheel_Left.tscn" id="4_aqjm6"]
[ext_resource type="PackedScene" uid="uid://3pwoou83rshw" path="res://Tractor/RearWheel_Right.tscn" id="5_6c0jj"]
[ext_resource type="Texture2D" uid="uid://d37d1gbp3d5f4" path="res://Assets/Models/Tractor/Tractor_Wheeless_gltf/Material_13_baseColor.jpg" id="5_ovgho"]
[ext_resource type="PackedScene" uid="uid://c3cf18nnn23n1" path="res://Assets/Models/steering_wheel_3/scene.gltf" id="6_io73u"]
[ext_resource type="PackedScene" uid="uid://bgr7tghp1588c" path="res://GNSSAntenna.tscn" id="9_b1jae"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yesxo"]
size = Vector3(1, 0.807861, 2.12457)

[sub_resource type="BoxShape3D" id="BoxShape3D_mgv0b"]
size = Vector3(1.26999, 0.935913, 1.44537)

[sub_resource type="BoxShape3D" id="BoxShape3D_bgknp"]
size = Vector3(0.852661, 0.298233, 0.606873)

[sub_resource type="BoxShape3D" id="BoxShape3D_uhdiv"]
size = Vector3(0.783447, 1.10962, 1.88208)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b887x"]
resource_name = "Material_10"
cull_mode = 2
albedo_texture = ExtResource("5_ovgho")
roughness = 0.6

[sub_resource type="CylinderMesh" id="CylinderMesh_ej7qm"]
top_radius = 0.89
bottom_radius = 0.89
height = 0.6
radial_segments = 32

[sub_resource type="CylinderMesh" id="CylinderMesh_mtckq"]
top_radius = 0.7
bottom_radius = 0.7
height = 0.6
radial_segments = 32

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xd275"]

[sub_resource type="BoxMesh" id="BoxMesh_kqxe3"]
size = Vector3(10, 0.3, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2rngh"]
size = Vector3(10, 0.3, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i6uve"]
resource_name = "Material_10"
cull_mode = 2
albedo_texture = ExtResource("5_ovgho")
roughness = 0.6

[sub_resource type="CylinderMesh" id="CylinderMesh_kajdr"]
top_radius = 0.1
bottom_radius = 0.1
height = 2.5
radial_segments = 8
rings = 1
cap_top = false
cap_bottom = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e08vq"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 0, 0.501961)
disable_receive_shadows = true

[sub_resource type="BoxMesh" id="BoxMesh_pg6t8"]
size = Vector3(0.1, 1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_kte43"]
size = Vector3(10, 1, 0.1)

[node name="Tractor" type="VehicleBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mass = 7000.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.5, 0)
script = ExtResource("1_p1t78")
implementWidth = null
implementColliding = null
implementVisible = null
crosshairVisible = null

[node name="GNSSAntenna" parent="." instance=ExtResource("9_b1jae")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 2.9, -1.39)

[node name="Tractor_Wheeless" parent="." instance=ExtResource("1_lulf2")]

[node name="AM115_026_35_Material #14_0" parent="Tractor_Wheeless/Sketchfab_model/eeff7b40aecd4dd1a8f4adcae6c5bdec_fbx/RootNode/AM115_026/AM115_026_35" index="0"]
transform = Transform3D(1, 0, 0, 0, 1.15, 0, 0, 0, 1, 0, 0, 0)

[node name="Dial_Left_Exterior" parent="Tractor_Wheeless/Sketchfab_model/eeff7b40aecd4dd1a8f4adcae6c5bdec_fbx/RootNode/AM115_026" index="68"]
visible = false

[node name="Dial_Right_Exterior" parent="Tractor_Wheeless/Sketchfab_model/eeff7b40aecd4dd1a8f4adcae6c5bdec_fbx/RootNode/AM115_026" index="69"]
visible = false

[node name="Dials_Surface" parent="Tractor_Wheeless/Sketchfab_model/eeff7b40aecd4dd1a8f4adcae6c5bdec_fbx/RootNode/AM115_026" index="70"]
visible = false

[node name="ExhaustPipe" parent="Tractor_Wheeless/Sketchfab_model/eeff7b40aecd4dd1a8f4adcae6c5bdec_fbx/RootNode/AM115_026" index="71"]
transform = Transform3D(1, 0, 0, 7.10543e-15, 1, 0, 0, 0, 1, 3.70381, 39.8495, 204.054)

[node name="Steering_Wheel_Center" parent="Tractor_Wheeless/Sketchfab_model/eeff7b40aecd4dd1a8f4adcae6c5bdec_fbx/RootNode/AM115_026" index="87"]
visible = false

[node name="Steering_Wheel_Ring" parent="Tractor_Wheeless/Sketchfab_model/eeff7b40aecd4dd1a8f4adcae6c5bdec_fbx/RootNode/AM115_026" index="88"]
visible = false

[node name="Steerring_Wheel_Spokes" parent="Tractor_Wheeless/Sketchfab_model/eeff7b40aecd4dd1a8f4adcae6c5bdec_fbx/RootNode/AM115_026" index="89"]
visible = false

[node name="CollisionShape_Nose" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.97515, -0.221549, 0, 0.221549, 0.97515, 0, 1.546, 0.751)
shape = SubResource("BoxShape3D_yesxo")

[node name="CollisionShape_Cab" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.414, -0.724)
shape = SubResource("BoxShape3D_mgv0b")

[node name="CollisionShape_FrontWeight" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.41421e-07, 0.9, 1.96025)
shape = SubResource("BoxShape3D_bgknp")

[node name="CollisionShape_RearBody" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.336, -0.919)
shape = SubResource("BoxShape3D_uhdiv")

[node name="VehicleWheel_RearLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0.9, -1.39)
use_as_traction = true
wheel_radius = 0.89
wheel_rest_length = 0.05
suspension_travel = 0.1
suspension_stiffness = 100.0
suspension_max_force = 100000.0
damping_compression = 0.99
damping_relaxation = 1.0

[node name="DebugWheel" type="MeshInstance3D" parent="VehicleWheel_RearLeft"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.2, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_b887x")
mesh = SubResource("CylinderMesh_ej7qm")

[node name="VehicleWheel_RearRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0.9, -1.39)
use_as_traction = true
wheel_radius = 0.89
wheel_rest_length = 0.05
suspension_travel = 0.1
suspension_stiffness = 100.0
suspension_max_force = 100000.0
damping_compression = 0.99
damping_relaxation = 1.0

[node name="DebugWheel" type="MeshInstance3D" parent="VehicleWheel_RearRight"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.2, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_b887x")
mesh = SubResource("CylinderMesh_ej7qm")

[node name="VehicleWheel_FrontLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0.7, 1.25)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.7
wheel_rest_length = 0.05
suspension_travel = 0.25
suspension_stiffness = 100.0
suspension_max_force = 50000.0
damping_compression = 0.99
damping_relaxation = 1.0

[node name="DebugWheel" type="MeshInstance3D" parent="VehicleWheel_FrontLeft"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_b887x")
mesh = SubResource("CylinderMesh_mtckq")

[node name="VehicleWheel_FrontRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0.7, 1.25)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.7
wheel_rest_length = 0.05
suspension_travel = 0.25
suspension_stiffness = 100.0
suspension_max_force = 50000.0
damping_compression = 0.99
damping_relaxation = 1.0

[node name="DebugWheel" type="MeshInstance3D" parent="VehicleWheel_FrontRight"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_b887x")
mesh = SubResource("CylinderMesh_mtckq")

[node name="SteeringWheelBase" type="Node3D" parent="."]
transform = Transform3D(-1, 3.69465e-08, -7.9232e-08, 0, 0.906308, 0.422618, 8.74228e-08, 0.422618, -0.906308, -1.02094e-08, 2.12792, -0.300218)

[node name="Rotator" type="Node3D" parent="SteeringWheelBase"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Sketchfab_Scene" parent="SteeringWheelBase/Rotator" instance=ExtResource("6_io73u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.447, 0)

[node name="Implement" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2.49)
material_override = SubResource("StandardMaterial3D_xd275")
mesh = SubResource("BoxMesh_kqxe3")

[node name="CollisionShape_Implement" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2.5)
shape = SubResource("BoxShape3D_2rngh")

[node name="RearWheelObject_Left" parent="." instance=ExtResource("4_aqjm6")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.1, 0.9, -1.39)

[node name="RearWheelObject_Right" parent="." instance=ExtResource("5_6c0jj")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.1, 0.9, -1.39)

[node name="FrontWheelObject_Left" parent="." instance=ExtResource("2_6cc24")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.2, 0.7, 1.25)

[node name="FrontWheelObject_Right" parent="." instance=ExtResource("3_2bmak")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.2, 0.7, 1.25)

[node name="FakeFrontAxle" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.7, 1.25)
material_override = SubResource("StandardMaterial3D_i6uve")
mesh = SubResource("CylinderMesh_kajdr")

[node name="Crosshair" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.39)
visible = false

[node name="FrontBack" type="MeshInstance3D" parent="Crosshair"]
material_override = SubResource("StandardMaterial3D_e08vq")
cast_shadow = 0
mesh = SubResource("BoxMesh_pg6t8")

[node name="LeftRight" type="MeshInstance3D" parent="Crosshair"]
material_override = SubResource("StandardMaterial3D_e08vq")
mesh = SubResource("BoxMesh_kte43")

[editable path="Tractor_Wheeless"]
